Configure Swagger OpenAPI integration and security rules